--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "hook"
   ],
   "dependencies": {
-    "async": "1.5.0",
-    "lodash": "3.10.1",
-    "machinepack-urls": "^3.1.1",
+    "async": "^3.1.0",
+    "lodash": "^4.17.15",
+    "machinepack-urls": "^6.0.1",
     "semver": "^4.3.4",
-    "socket.io": "1.7.3",
+    "socket.io": "^2.3.0",
     "uid2": "0.0.3"
   },
   "devDependencies": {
     "machinepack-fs": "^3.0.0",
     "machinepack-http": "^3.1.2",
-    "mocha": "3.0.2",
+    "mocha": "^6.2.2",
     "sails": "^0.12.0",
     "sails.io.js": "^0.13.0",
-    "socket.io-client": "1.7.3",
-    "socket.io-redis": "^1.0.0"
+    "socket.io-client": "^2.3.0",
+    "socket.io-redis": "^5.2.0"
   },
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha test/** --timeout 5000"
+    "test": "mocha test/** --timeout 5000 --exit"
   },
   "main": "index.js",
   "repository": {
