--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "async": "^3.1.0",
     "lodash": "^4.17.15",
-    "machinepack-urls": "^6.0.1",
+    "machinepack-urls": "git+https://github.com/mobilusoss/machinepack-urls.git#master",
     "semver": "^4.3.4",
     "socket.io": "^2.3.0",
     "uid2": "0.0.3"
